[gd_scene load_steps=11 format=2]

[ext_resource path="res://imgs/Bombe/bombes1.png" type="Texture" id=1]
[ext_resource path="res://imgs/Bombe/bombes2.png" type="Texture" id=2]
[ext_resource path="res://imgs/Bombe/bombes3.png" type="Texture" id=3]
[ext_resource path="res://src/Bomb/Bomb.gd" type="Script" id=4]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 4
fps = 8.0
frame_0/texture = ExtResource( 1 )
frame_1/texture = ExtResource( 2 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 2 )
frame_3/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 21 )

[sub_resource type="Animation" id=3]
resource_name = "Explosion"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.1, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "posed"
}, {
"args": [  ],
"method": "MACRONEXPLOSION"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.6, 0.7, 1.1, 1.2, 1.7, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 1.2, 1.2 ), Vector2( 1.3, 1.3 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 66.073 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 67.25, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 20.5, 21.25 )

[node name="Bombe" type="RigidBody2D"]
mode = 1
gravity_scale = 0.0
angular_damp = 2000.0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.2, 1.2 )
texture = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Explosion"
anims/Explosion = SubResource( 3 )

[node name="AreaExplo" type="Area2D" parent="."]
space_override = 1

[node name="CollisionShape2DExploV" type="CollisionShape2D" parent="AreaExplo"]
shape = SubResource( 4 )

[node name="CollisionShape2DExploH" type="CollisionShape2D" parent="AreaExplo"]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
space_override = 1

[node name="CollisionSortieBomb" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.75 )
shape = SubResource( 6 )

[connection signal="body_entered" from="." to="Collision" method="_on_Bombe_body_entered"]
[connection signal="body_exited" from="." to="Collision" method="_on_Bombe_body_exited"]
[connection signal="body_entered" from="AreaExplo" to="." method="_on_AreaExplo_body_entered"]
[connection signal="body_exited" from="AreaExplo" to="." method="_on_AreaExplo_body_exited"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
